DEV: adds horizontal scrollbar & fixes mobile view

--- a/stylesheets/container.scss
+++ b/stylesheets/container.scss
@@ -4,7 +4,14 @@
   grid-template-rows: auto;
   gap: 30px;
   padding: 0 0 2rem 0;
+  overflow: scroll;
+  overflow-y: hidden;
 }
+
+.featured-cards-container::-webkit-scrollbar {
+  display: none;
+}
+
 @media screen and (max-width: 1000px) {
   .featured-cards-container {
     grid-template-columns: repeat(3, 1fr);
@@ -24,6 +31,14 @@
 @media screen and (max-width: 600px) {
   .featured-cards-container {
     grid-template-columns: repeat(2, 1fr);
+  }
+  .featured-card:nth-child(n + 3) {
+    display: none;
+  }
+}
+@media screen and (max-width: 400px) {
+  .featured-cards-container {
+    grid-template-columns: repeat(1, 1fr);
   }
   .featured-card:nth-child(n + 3) {
     display: none;
